--- a/expenses-tracker/src/components/Expenses/ExpenseItem.css
+++ b/expenses-tracker/src/components/Expenses/ExpenseItem.css
@@ -31,8 +31,8 @@
 	font-size: 1rem;
 	font-weight: bold;
 	color: white;
-	background-color: #40005d;
-	border: 1px solid white;
+	background-color: navy;
+	border: 1px solid rgb(0, 170, 226);
 	padding: 0.5rem;
 	border-radius: 12px;
 }
