--- a/add-user/src/components/Form.css
+++ b/add-user/src/components/Form.css
@@ -1,6 +1,6 @@
 label {
 	display: flex;
-	margin: 1% 2.5% 0% 2.5%;
+	margin: 5px 10px 5px 10px;
 	width: 95%;
 	height: 25px;
 	font-weight: 600;
@@ -9,22 +9,10 @@ label {
 
 input {
 	display: flex;
-	margin: 0.5% 2.5% 0% 2.5%;
+	margin: 5px 10px 5px 10px;
 	width: 95%;
 	height: 30px;
 	border: 1px solid grey;
 	background-color: white;
 	padding: 5px;
-}
-
-.AddBtn {
-	display: flex;
-	margin: 2.5%;
-	align-items: center;
-	justify-content: center;
-	height: 25px;
-	width: 100px;
-	border: 1px solid grey;
-	background-color: midnightblue;
-	color: white;
 }
