--- a/e-shop/src/index.css
+++ b/e-shop/src/index.css
@@ -7,7 +7,7 @@
 body {
 	font-family: "Open Sans", "Helvetica Neue", "Segoe UI", Roboto, Oxygen, Ubuntu,
 		Cantarell;
-	background: whitesmoke;
+	background: gainsboro;
 }
 
 img {
@@ -21,10 +21,20 @@ img {
 	margin: 5rem auto;
 	display: grid;
 	gap: 2rem;
+	color: rgb(50, 50, 50);
 }
 
 @media screen and (min-width: 768px) {
 	.productlist {
 		grid-template-columns: repeat(3, 1fr);
 	}
+}
+
+.product {
+	background: whitesmoke;
+	border-radius: 1rem;
+	padding: 1rem 2rem;
+}
+.product h1 {
+	margin-top: 0.5rem;
 }
