--- a/e-shop/src/index.css
+++ b/e-shop/src/index.css
@@ -11,7 +11,7 @@ body {
 }
 
 img {
-	width: 30%;
+	width: 150px;
 	height: auto;
 }
 
@@ -37,4 +37,9 @@ img {
 }
 .product h1 {
 	margin-top: 0.5rem;
+}
+
+.product h4 {
+	color: grey;
+	font-size: 0.75rem;
 }
